<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/ic_calendar_ldpi"
        app:civ_border_width="2dp"
        app:civ_border_color="#FFffffff"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/profile_image"
        android:layout_toLeftOf="@+id/tv_details">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recycleritem_users_textview2"
            android:id="@+id/tv_username"
            android:fontFamily="@font/lato_regular"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recycleritem_users_textview3"
            android:id="@+id/tv_score"
            android:fontFamily="@font/lato_regular"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentRight="true"
        android:text="@string/recycleritem_users_textview1"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/tv_details"
        android:fontFamily="@font/lato_regular"/>
</RelativeLayout>
